// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character Caption adds the checked modifier 1`] = `
.c0 {
  position: absolute;
  width: 100%;
  bottom: -.5em;
  left: 0;
  font-weight: normal;
  text-align: center;
  font-size: 0.75rem;
  background: #222;
  color: rgba(255,255,255,1);
  padding: 0.2em 0.5em;
  box-sizing: border-box;
  border: solid #222;
  border-width: 2px 2px 3px 3px;
  border-radius: 4% 95% 6% 95%/95% 4% 92% 5%;
  -webkit-transform: rotate(-2deg);
  -ms-transform: rotate(-2deg);
  transform: rotate(-2deg);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

<figcaption
  checked={true}
  className="c0"
>
  Iron Man
</figcaption>
`;

exports[`Character Caption renders correctly 1`] = `
.c0 {
  position: absolute;
  width: auto;
  bottom: 1em;
  left: 1em;
  font-weight: 900;
  text-align: center;
  font-size: 0.75rem;
  background: #222;
  color: rgba(255,255,255,1);
  padding: 0.2em 0.5em;
  box-sizing: border-box;
  border: solid #222;
  border-width: 2px 2px 3px 3px;
  border-radius: 25px;
  -webkit-transform: rotate(-2deg);
  -ms-transform: rotate(-2deg);
  transform: rotate(-2deg);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

<figcaption
  className="c0"
>
  Iron Man
</figcaption>
`;
